--- a/docs/format_bcol.wiki
+++ b/docs/format_bcol.wiki
@@ -9,7 +9,7 @@ The bcol format consists of two files, one in a text format
 describing the bcol data (bcolfile.bcol) and one containing the actual 
 binary data (bcolfile.bcol.bin.lz4). There may be a (third) index file 
 (bcolfile.bcol.bin.lz4i) for faster random access to the compressed binary data.
-bcol files can be created based on a [[format_tsv|tab-separated file]] file using the
+bcol files can be created based on a tab-separated file ([[tsv]]) file using the
 command [[cg_bcol_make|cg bcol make]]. 
 
 There was an older version of the bcol format (which did not support multiple 
@@ -21,7 +21,7 @@ cg bcol_update newbcolfile oldbcolfile ?oldbcolfile2? ...
 }}}
 
 == bcolfile.bcol ==
-bcolfile.bcol is a [[format_tsv|tab-separated file]] with the following format
+bcolfile.bcol is a tab-separated file ([[tsv]]) with the following format
 
 {{{
 # binary column
