--- a/lib/cg_regjoin.wiki
+++ b/lib/cg_regjoin.wiki
@@ -1,7 +1,7 @@
 = Regjoin =
 
 == Format ==
-cg regjoin ?region_file1? ?region_file2?
+cg regjoin ?options? ?region_file1? ?region_file2?
 
 == Summary ==
 join regions in 1 or 2 regionfiles
@@ -12,6 +12,11 @@ chromosome, begin, end. Regions must be sorted.
 regjoin joins all overlapping or adjoined regions into
 one region. The resulting regions files is written to stdout.
 If no arguments are given, a region file should be entered via stdin
+
+== Options ==
+; -fields: if fields is given, only regions that, consecutively, have the
+same value for the given fields will be joined. This only works with one
+region file (and is a significantly slower)
 
 == Arguments ==
 ; **region_file1**: regions file
