--- a/lib/cg_liftregion.wiki
+++ b/lib/cg_liftregion.wiki
@@ -17,7 +17,7 @@ available in resultfile.unmapped.
 ; **regionfile**: file in tsv format (with region data)
 ; **resultfile**: resulting converted file
 ; **liftoverfile**: liftover file guiding the conversion,
-e.g. hg18/hg18ToHg19.over.chain to convert from hg18 to hg19, and hg19/hg19ToHg18.over.chain to convert from hg19 to hg18
+e.g. hg18/hg18ToHg19.over.tsv to convert from hg18 to hg19, and hg19/hg19ToHg18.over.tsv to convert from hg19 to hg18
 
 == Category ==
 Conversion
