makedbs and cg download updates: reorganization (change to cg_download_x in separate files), use resultfile, db updates and added new dbs (kaviar) and refs (hg38), added wgetfiles, changed cg_download_genome, cg_calcsequencedgenome, ...

--- a/lib/cg_download_biograph.wiki
+++ b/lib/cg_download_biograph.wiki
@@ -1,10 +1,10 @@
-= downloadbiograph =
+= download_biograph =
 
 == Format ==
-cg downloadbiograph resultfile diseaseid ?genefile?
+cg download_biograph resultfile diseaseid ?genefile?
 
 == Summary ==
-download gene rank data from biograph.
+download_biograph gene rank data from biograph.
 
 == Description ==
 Creates a tab separated file with gene names and their biograph rank wrt
