jobtargetexists change: do not rename target to .old if deps are newer, added test_job_init to tests and adopted

--- a/docs/jobsystem.wiki
+++ b/docs/jobsystem.wiki
@@ -132,12 +132,12 @@ jobglob1: returns the first file in a jobglob
 jobfileexists: same as "file exists", but takes into account files that will be available
 at that stage of the program (targets of previous jobs)
 
-jobtargetexists target deps: returns 1 if target already exists, taking
-into account dependencies: If one of the files/patterns in deps is newer
-than target or is in the queue or being made, target will be renamed to
-target.old and 0 will be returned. By default if a dep does not exist and is not
-being made, it will not be considered "newer". You can use the -checkdepexists 1
-option to also return 0 if a dep does not exist.
+jobtargetexists target dep1 ...: returns 1 if target already exists and is
+newer than all dependencies. Returns 0 if target does not exists or if one
+of the files/patterns in deps is newer than target or is in the queue or
+being made. By default if a dep does not exist and is not being made, it
+will not be considered "newer". You can use the -checkdepexists 1 option
+to also return 0 if a dep does not exist.
 
 == job_wait ==
 job_wait must be added at the end of the program. It will wait (if needed) for all jobs to finish.
