added cg lz4ra, help on compression tools updated, Category Compression added

--- a/lib/cg_lz4.wiki
+++ b/lib/cg_lz4.wiki
@@ -25,4 +25,4 @@ order of magnitude faster
 If the --keep option is not explicitely given, using -o will change the "default" for -k to 1.
 
 == Category ==
-Tools
+Compression
